feat(table): enhance representative filtering; add clear filter functionality and improve pagination handling

--- a/projects/demo/src/app/components/table-sample/table-sample.component.html
+++ b/projects/demo/src/app/components/table-sample/table-sample.component.html
@@ -9,6 +9,7 @@
           nbaColumnHeader
           field="representative.name"
           (onApplyFilter)="dt.setFilter($event, filterByRepresentative)"
+          (onClearFilter)="selectedRepresentative = []"
         >
           Representante
           <ng-template #filter>
