--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -26,7 +26,7 @@
     <div class="d-flex align-items-center gap-3 justify-content-end flex-wrap">
         <small class="text-muted me-2">Página <b>{{ page() }}</b> de <b>{{ smallNumPages() }}</b></small>
         <pagination
-            [ngModel]="page()"
+            [(ngModel)]="page"
             [itemsPerPage]="itemsPerPage()"
             [totalItems]="processedData().length"
             [boundaryLinks]="true"
@@ -38,10 +38,14 @@
             lastText="&raquo;"
             (numPages)="smallNumPages.set($event)"
         />
-        <select [(ngModel)]="itemsPerPage" class="form-select rounded-1 w-auto no-validate">
-            <option [value]="10">10</option>
-            <option [value]="25">25</option>
-            <option [value]="50">50</option>
+        <select
+            [ngModel]="itemsPerPage()"
+            (ngModelChange)="onItemsPerPage($event)"
+            class="form-select rounded-1 w-auto no-validate"
+        >
+            <option [ngValue]="10">10</option>
+            <option [ngValue]="25">25</option>
+            <option [ngValue]="50">50</option>
         </select>
     </div>
 }
