--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -1,10 +1,10 @@
 @if(caption()){
     <div><ng-container *ngTemplateOutlet="caption()!"></ng-container></div>
 }
-<div class="table-responsive">
+<div class="table-responsive" dragScroll>
     <table class="table table-hover rounded-1">
         @if(header()){
-            <thead>
+            <thead class="bg-primary">
                 <ng-container *ngTemplateOutlet="header()!; context: { 
                     $implicit: this,
                     sortField: sortField(),
