--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse-placeholder/ac-collapse-placeholder.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse-placeholder/ac-collapse-placeholder.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4 placeholder-wave">
   <div></div>
   <div class="bg-primary placeholder w-50" style="height: 1vh;"></div>
-  <button class="btn btn-link p-0">
+  <button type="button" class="btn btn-link p-0">
     <i class="ti ti-x h4 mb-0"></i>
   </button>
 </div>
