--- a/projects/ng-bootstrap-addons/table/src/table.component.html
+++ b/projects/ng-bootstrap-addons/table/src/table.component.html
@@ -1,12 +1,8 @@
-<div class="d-flex flex-column align-items-start pb-2 border-bottom mb-3">
-    @if(caption()){
-        <ng-container *ngTemplateOutlet="caption()!"></ng-container>
-    }
-    <a href="javascript:;" class="btn btn-sm btn-outline-dark" (click)="clearFilters()">
-        <i class="ti ti-filter-off"></i>
-        Limpar
-    </a>
+@if(caption()){
+<div class="pb-2 border-bottom mb-3">
+    <ng-container *ngTemplateOutlet="caption()!"></ng-container>
 </div>
+}
 <div class="table-responsive" dragScroll>
     <table class="table table-hover rounded-1">
         @if(header()){
