feat(inputs): update icon class for input labels and enhance input styling feat(styles): add compact floating label mixin for improved input design feat(column-filter): implement click outside directive for dropdown closure

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -1,11 +1,13 @@
 <app-sample-container tagName="nba-input">
     <nba-input
+        icon="ti ti-file"
         label="Default Input"
         [(ngModel)]="defaultInput"
     />
     <hr>
     <nba-input
         label="Currency Input"
+        icon="ti ti-file"
         currency
         hasCurrency
         [(ngModel)]="currencyInput"
