--- a/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
@@ -25,7 +25,7 @@
                 >
                 <label [for]="inputId()" [class.required]="isRequired">
                     @if(icon()){
-                            <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                            <i [class]="'ti mb-0 ' + icon()"></i>
                     }
                     {{label()}}
                 </label>
