--- a/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
@@ -24,7 +24,7 @@
                 >
                 <label [for]="inputId() + '-start'" [class.required]="isRequired">
                     @if(icon()){
-                            <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                            <i [class]="'ti mb-0 ' + icon()"></i>
                     }
                     Min
                 </label>
@@ -51,7 +51,7 @@
                 >
                 <label [for]="inputId() + '-end'" [class.required]="isRequired">
                     @if(icon()){
-                            <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                            <i [class]="'ti mb-0 ' + icon()"></i>
                     }
                     Max
                 </label>
