--- a/projects/ng-bootstrap-addons/selects/src/select/select.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/select/select.component.html
@@ -13,7 +13,7 @@
                     <ng-content></ng-content>
                 </select>
                 <label [for]="inputId()" [class.required]="isRequired">
-                    @if(icon()){<i [class]="'ti h5 mb-0 ' + icon()"></i>}
+                    @if(icon()){<i [class]="'ti mb-0 ' + icon()"></i>}
                     {{label()}}
                 </label>
             </div>
