--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
@@ -89,7 +89,7 @@
           }
           <label [for]="inputId()" [class.required]="isRequired">
               @if(icon()){
-                <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                <i [class]="'ti mb-0 ' + icon()"></i>
               }
               {{label()}}
           </label>
