--- a/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/multiselect/multiselect.component.html
@@ -62,7 +62,7 @@
             </ul>
             <label [for]="inputId()" [class.required]="isRequired">
                 @if(icon()){
-                        <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                        <i [class]="'ti mb-0 ' + icon()"></i>
                 }
                 {{label()}}
             </label>
