--- a/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
+++ b/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
@@ -13,7 +13,7 @@
                 ></textarea>
                 <label [for]="inputId()" [class.required]="isRequired">
                     @if(icon()){
-                            <i [class]="'ti h5 mb-0 ' + icon()"></i>
+                            <i [class]="'ti mb-0 ' + icon()"></i>
                     }
                     {{label()}}
                 </label>
