feat(inputs, selects, textarea): add dynamic sizing to form-floating components

--- a/projects/demo/src/app/components/input-sample/input-sample.component.html
+++ b/projects/demo/src/app/components/input-sample/input-sample.component.html
@@ -2,6 +2,7 @@
     <nba-input
         icon="ti ti-file"
         label="Default Input"
+        size="sm"
         [(ngModel)]="defaultInput"
     />
     <hr>
