--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
@@ -1,7 +1,7 @@
 @defer (on viewport; prefetch on idle){
   @if(control){
     <div class="form-group" [class]="class()">
-      <div class="form-floating">
+      <div class="form-floating" [class]="'form-floating-' + size()">
           @if(focus()){
             <div class="position-fixed top-0 start-0 bottom-0 end-0 bg-black bg-opacity-25 z-2 fade-in"></div>
             <input
