--- a/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
@@ -3,7 +3,7 @@
     <div class="form-group" [class]="class()">
       <div class="input-group">
         <ng-content select="[group-prefix]"></ng-content>
-        <div class="form-floating">
+        <div class="form-floating" [class]="'form-floating-' + size()">
             @if(password()){
               <input
                 type="password"
