--- a/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
@@ -2,7 +2,7 @@
 
     @if(control){
         <div class="form-group d-flex flex-column align-items-center gap-1 position-relative flex-wrap" [class]="class()">
-            <div class="form-floating">
+            <div class="form-floating" [class]="'form-floating-' + size()">
                 <input
                     class="form-control"
                     type="number"
