--- a/projects/ng-bootstrap-addons/selects/src/select/select.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/select/select.component.html
@@ -1,7 +1,7 @@
 @defer (on viewport; prefetch on idle) {
     @if(control){
         <div class="form-group" [class]="class()">
-            <div class="form-floating">
+            <div class="form-floating" [class]="'form-floating-' + size()">
                 <select 
                     [name]="inputId()" 
                     [id]="inputId()"
