--- a/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
+++ b/projects/ng-bootstrap-addons/textarea/src/textarea.component.html
@@ -1,7 +1,7 @@
 @defer (on viewport; prefetch on idle){
     @if(control){
         <div class="form-group">
-            <div class="form-floating">
+            <div class="form-floating" [class]="'form-floating-' + size()">
                 <textarea 
                     class="form-control"
                     [formControl]="control"
