--- a/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/numeric-interval-input/numeric-interval-input.component.html
@@ -29,7 +29,7 @@
                     Min
                 </label>
             </div>
-            <div class="form-floating can-click">
+            <div class="form-floating can-click" [class]="'form-floating-' + size()">
                 <input
                     type="number"
                     class="form-control"
