--- a/projects/ng-bootstrap-addons/selects/src/select/select.component.html
+++ b/projects/ng-bootstrap-addons/selects/src/select/select.component.html
@@ -7,15 +7,18 @@
                     [id]="inputId()"
                     [class]="inputClass()"
                     [formControl]="control"
+                    [compareWith]="compareWith()"
                     class="form-select"
                     #input
                 >
                     <ng-content></ng-content>
                 </select>
-                <label [for]="inputId()" [class.required]="isRequired">
-                    @if(icon()){<i [class]="'ti mb-0 ' + icon()"></i>}
-                    {{label()}}
-                </label>
+                @if(label() || icon()){
+                    <label [for]="inputId()" [class.required]="isRequired">
+                        @if(icon()){<i [class]="'ti mb-0 ' + icon()"></i>}
+                        {{label()}}
+                    </label>
+                }
             </div>
             <nba-form-error-message [control]="control"></nba-form-error-message>
         </div>
