--- a/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
+++ b/projects/demo/src/app/components/multiselect-sample/multiselect-sample.component.html
@@ -3,6 +3,7 @@
         label="Default Multiselect"
         [formControl]="control"
         [options]="options"
+        [multiple]="false"
     ></nba-multiselect>
     <hr>
     Value: {{ control.value }}
