--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/ac-search-lov.component.html
@@ -45,7 +45,7 @@
               (onSelect)="selectItem($event)"
               [collapse]="!focus()"
               [icon]="icon()"
-              [title]="label()"
+              [title]="label() ?? 'Selecione uma opção'"
               [listOfValues]="listOfValues()"
               [isLoading]="fetchDescCommand.running()"
               [map]="map()"
@@ -59,6 +59,7 @@
               class="form-control"
               [class]="inputClass()"
               [formControl]="descControl"
+              [disabled]="control.disabled"
               [id]="inputId()"
               [name]="inputId()"
               (keydown.f9)="focus.set(true)"
