--- a/projects/demo/src/styles/bootstrap/bootstrap-reset.scss
+++ b/projects/demo/src/styles/bootstrap/bootstrap-reset.scss
@@ -56,20 +56,17 @@
     display: block !important;
 }
 
-.form-floating {
-    > label{
-        height: auto;
-        color: $dark;
-    }
-    >.form-control, >.form-control-plaintext, >.form-select{
-        $height: calc(3.25rem + calc($border-width* 2));
-        height: $height;
-        min-height: $height;
-        line-height: normal;
+.form-control,
+.form-control-plaintext,
+.form-select{}
 
-    }
-    > .form-control:focus ~ label, > .form-control:not(:placeholder-shown) ~ label, > .form-control-plaintext ~ label, > .form-select ~ label{
-        color: $primary;
-    }
+// .form-floating {
+//     > label{
+//         height: auto;
+//         color: $dark;
+//     }
+//     > .form-control:focus ~ label, > .form-control:not(:placeholder-shown) ~ label, > .form-control-plaintext ~ label, > .form-select ~ label{
+//         color: $primary;
+//     }
 
-}
+// }
