--- a/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
@@ -42,8 +42,7 @@
         }
         
         @case('boolean') {
-          <nba-switch 
-            label="Filtro"
+          <nba-switch
             class="fw-normal"
             inputClass="no-validate"
             [(ngModel)]="value"
@@ -63,15 +62,12 @@
   </div>
   
   <div class="mt-3 d-flex align-items-center justify-content-between">
-    <button 
-      type="button" 
-      class="btn btn-sm btn-default"
-      (click)="clearFilter()">
+    <button type="button" class="btn btn-sm btn-default" (click)="clearFilter()">
+      <i class="ti ti-filter-off"></i>
       Limpar
     </button>
-    <button 
-      type="submit" 
-      class="btn btn-sm btn-primary">
+    <button type="submit" class="btn btn-sm btn-primary">
+      <i class="ti ti-check"></i>
       Aplicar
     </button>
   </div>
