--- a/projects/demo/src/styles/bootstrap/bootstrap-reset.scss
+++ b/projects/demo/src/styles/bootstrap/bootstrap-reset.scss
@@ -58,15 +58,6 @@
 
 .form-control,
 .form-control-plaintext,
-.form-select{}
-
-// .form-floating {
-//     > label{
-//         height: auto;
-//         color: $dark;
-//     }
-//     > .form-control:focus ~ label, > .form-control:not(:placeholder-shown) ~ label, > .form-control-plaintext ~ label, > .form-select ~ label{
-//         color: $primary;
-//     }
-
-// }
+.form-select{
+    border-radius: .25rem;
+}
