--- a/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-header/column-header.component.html
@@ -6,13 +6,13 @@
     <span class="sort-icon fw-bold lh-1">
       @switch(sortDirection()) {
         @case('asc') {
-          <i class="sorted ti ti-chevron-up"></i>
+          <i class="sorted nba-arrow-up"></i>
         }
         @case('desc') {
-          <i class="sorted ti ti-chevron-down"></i>
+          <i class="sorted nba-arrow-down"></i>
         }
         @default {
-          <i class="ti ti-selector"></i>
+          <i class="nba-arrows-down-up"></i>
         }
       }
     </span>
