--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse-placeholder/ac-collapse-placeholder.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse-placeholder/ac-collapse-placeholder.component.html
@@ -1,9 +1,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4 placeholder-wave">
   <div></div>
   <div class="bg-primary placeholder w-50" style="height: 1vh;"></div>
-  <button type="button" class="btn btn-link p-0">
-    <i class="ti ti-x h4 mb-0"></i>
-  </button>
+  <button type="button" class="btn btn-link p-0 fs-2 text-decoration-none mb-0">&times;</button>
 </div>
 <div class="d-flex flex-column gap-3 overflow-auto" style="max-height: 40vh;">
   @for (item of [1,2,3,4,5,6]; track $index) {
