--- a/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/ac-search-lov/components/ac-collapse/ac-collapse.component.html
@@ -4,9 +4,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
           <div></div>
           <h5 class="mb-0 fw-bold text-primary text-center">{{title()}}</h5>
-          <button type="button" class="btn btn-link p-0" (click)="onClose.emit()">
-            <i class="ti ti-x h4 mb-0"></i>
-          </button>
+          <button type="button" class="btn btn-link p-0 fs-2 text-decoration-none mb-0" (click)="onClose.emit()">&times;</button>
         </div>
         <div class="d-flex flex-column gap-3 overflow-auto">
           @if(!listOfValues().length){
