feat(select): update select component to use ngModel and improve form control handling fix(inputs): standardize form group class usage across input components chore(package): update version to 19.1.1

--- a/projects/demo/src/app/components/select-sample/select-sample.component.html
+++ b/projects/demo/src/app/components/select-sample/select-sample.component.html
@@ -1,7 +1,7 @@
 <app-sample-container tagName="nba-select">
     <nba-select
         label="Default Select"
-        [formControl]="control"
+        [(ngModel)]="control"
     >
         <option value="">Selecione</option>
         <option value="option1">Option 1</option>
@@ -9,5 +9,5 @@
         <option value="option3">Option 3</option>
     </nba-select>
     <hr>
-    Value: {{ control.value }}
+    Value: {{ control }}
 </app-sample-container>
