--- a/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/datetime-range-picker/datetime-range-picker.component.html
@@ -1,7 +1,7 @@
 @defer (on viewport; prefetch on idle){
 
     @if(control){
-        <div class="form-group position-relative" [class]="class()">
+        <div class="form-group position-relative" [class]="formGroupClass()">
             <div class="form-floating can-click" [class]="'form-floating-' + size()">
                 <input
                     class="form-control"
