--- a/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/input/input.component.html
@@ -1,6 +1,6 @@
 @defer (on viewport; prefetch on idle){
   @if(control){
-    <div class="form-group" [class]="class()">
+    <div class="form-group" [class]="formGroupClass()">
       <div class="input-group">
         <ng-content select="[group-prefix]"></ng-content>
         <div class="form-floating" [class]="'form-floating-' + size()">
