--- a/projects/ng-bootstrap-addons/inputs/src/switch/switch.component.html
+++ b/projects/ng-bootstrap-addons/inputs/src/switch/switch.component.html
@@ -1,5 +1,5 @@
 @if(control){
-    <div class="form-check form-switch" [class]="class()">
+    <div class="form-check form-switch" [class]="formGroupClass()">
         <input 
             class="form-check-input"
             type="checkbox"
